mingw64/include/mpfr.h

typedef short mpfr_prec_t;
typedef int   mpfr_prec_t;
/* we could use "long long" under Windows 64 here, which can be tested
   with the macro _WIN64 according to
   https://sourceforge.net/p/predef/wiki/OperatingSystems/ */
typedef long  mpfr_prec_t;
/* Definition of sign */
typedef int          mpfr_sign_t;
typedef short mpfr_exp_t;
typedef int mpfr_exp_t;
typedef long mpfr_exp_t;
/* Note: in this case, intmax_t and uintmax_t must be defined before
   the inclusion of mpfr.h (we do not include <stdint.h> here because
   of some non-ISO C99 implementations that support these types). */
typedef intmax_t mpfr_exp_t;
/* Definition of the main structure */
typedef struct {
  mpfr_prec_t  _mpfr_prec;
  mpfr_sign_t  _mpfr_sign;
  mpfr_exp_t   _mpfr_exp;
  mp_limb_t   *_mpfr_d;
} __mpfr_struct;
/*
   The represented number is
      _sign*(_d[k-1]/B+_d[k-2]/B^2+...+_d[0]/B^k)*2^_exp
   where k=ceil(_mp_prec/GMP_NUMB_BITS) and B=2^GMP_NUMB_BITS.

   For the msb (most significant bit) normalized representation, we must have
      _d[k-1]>=B/2, unless the number is singular.

   We must also have the last k*GMP_NUMB_BITS-_prec bits set to zero.
*/

typedef __mpfr_struct mpfr_t[1];
typedef __mpfr_struct *mpfr_ptr;
typedef const __mpfr_struct *mpfr_srcptr;